--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
     padding: 0;
     background: url('images/museum-back.webp') no-repeat center center fixed;
     background-size: cover;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
 }
+
 .modal {
     display: none;
     position: fixed;
@@ -16,10 +17,11 @@ body {
     transform: translate(-50%, -50%);
     background: white;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    border-radius: 8px;
+    border-radius: 10px;
     text-align: center;
+    z-index: 1000;
 }
+
 .overlay {
     display: none;
     position: fixed;
@@ -27,13 +29,86 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 500;
 }
-.book {
-    position: absolute;
-    left: 50%;
-    bottom: 0%;
-    width: 500px;
-    height: 150px;
+
+.reset-button {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    padding: 10px 20px;
+    background-color: red;
+    color: white;
+    border-radius: 10px;
+    border-color: black;
     cursor: pointer;
-    transform: translateX(-50%);
+    z-index: 1100;
+}
+
+.book-area {
+    position: absolute;
+    left: 32%;
+    bottom: 0%;
+    width: 34%;
+    height: 18.75%;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 900;
+}
+
+.door-area {
+    position: absolute;
+    top: 16%;
+    left: 41%;
+    width: 21%;
+    height: 54%;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 900;
+}
+
+.set-piece {
+    position: absolute;
+    top: 1%;
+    left: 41.5%;
+    width: 20%;
+    height: 10%;
+    background-size: contain;
+    z-index: 900;
+}
+
+.set-piece-overlay {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    transition: opacity 3s ease;
+}
+
+.canvas {
+    position: absolute;
+    top: 20%;
+    width: 7.5%;
+    height: 28%;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 900;
+}
+#canvas1 { left: 30.9%; }
+#canvas2 { right: 26.5%; }
+
+/* Needed help for transition */
+.gold-transition {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(120, 105, 19, 0.1);
+    animation: goldHue 5s forwards;
+    pointer-events: none;
+}
+
+@keyframes goldHue {
+    0% { background: rgba(255, 215, 0, 0.1); }
+    100% { background: rgba(255, 215, 0, 0.7); }
 }
