--- a/style.css
+++ b/style.css
@@ -9,7 +9,12 @@ body {
     align-items: center;
 }
 
-.modal {
+body.second-room {
+    background: url('images/second-room-background.webp') no-repeat center center fixed;
+    background-size: cover;
+  }
+
+.modal, .confirmation-modal {
     display: none;
     position: fixed;
     top: 50%;
@@ -32,6 +37,24 @@ body {
     z-index: 500;
 }
 
+.overlay-section {
+    position: absolute;
+    width: 10%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 1);
+    transition: opacity 3s ease;
+  }
+  #overlaySection1 { left: 0%; }
+  #overlaySection2 { left: 10%; }
+  #overlaySection3 { left: 20%; }
+  #overlaySection4 { left: 30%; }
+  #overlaySection5 { left: 40%; }
+  #overlaySection6 { left: 50%; }
+  #overlaySection7 { left: 60%; }
+  #overlaySection8 { left: 70%; }
+  #overlaySection9 { left: 80%; }
+  #overlaySection10 { left: 90%; }
+
 .reset-button {
     position: fixed;
     top: 10px;
@@ -49,38 +72,62 @@ body {
     position: absolute;
     left: 32%;
     bottom: 0%;
-    width: 34%;
+    width: 36%;
     height: 18.75%;
     cursor: pointer;
-    opacity: 0;
-    z-index: 900;
+    outline: 5px dotted red;
+    outline-offset: 5px;
+    pointer-events: all;
+    z-index: 950;
+    animation: pulseOutline 2s infinite;
 }
 
 .door-area {
     position: absolute;
-    top: 16%;
+    top: 17%;
     left: 41%;
     width: 21%;
     height: 54%;
     cursor: pointer;
-    opacity: 0;
-    z-index: 900;
+    outline: 5px dotted red;
+    outline-offset: 5px;
+    pointer-events: all;
+    z-index: 950;
+    animation: pulseOutline 2s infinite;
+}
+
+.door-area-room2 {
+    position: absolute;
+    top: 15%;
+    left: 32%;
+    width: 40%;
+    height: 100%;
+    cursor: pointer;
+    outline: 5px dotted red;
+    outline-offset: 5px;
+    pointer-events: all;
+    z-index: 950;
+    animation: pulseOutline 2s infinite;
 }
 
 .set-piece {
     position: absolute;
-    top: 1%;
-    left: 41.5%;
-    width: 20%;
-    height: 10%;
+    top: 0%;
+    left: 40%;
+    width: 24%;
+    height: 15%;
     background-size: contain;
-    z-index: 900;
+    outline: 5px dotted red;
+    outline-offset: 5px;
+    pointer-events: all;
+    z-index: 950;
+    animation: pulseOutline 2s infinite;
 }
 
 .set-piece-overlay {
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 1);
     transition: opacity 3s ease;
 }
 
@@ -88,15 +135,103 @@ body {
     position: absolute;
     top: 20%;
     width: 7.5%;
-    height: 28%;
+    height: 25%;
     cursor: pointer;
-    opacity: 0;
-    z-index: 900;
+    outline: 5px dotted red;
+    outline-offset: 5px;
+    pointer-events: all;
+    z-index: 950;
+    animation: pulseOutline 2s infinite;
 }
+
 #canvas1 { left: 30.9%; }
 #canvas2 { right: 26.5%; }
+#canvas3 { 
+    top: 42%;
+    width: 9%;
+    height: 30%;
+    left: 16%; 
+}
+#canvas4 { 
+    top: 42%;
+    width: 9%;
+    height: 30%;
+    right: 13%; 
+}
 
-/* Needed help for transition */
+
+.statue {
+    position: absolute;
+    top: 52%;
+    width: 6%;
+    height: 26%;
+    cursor: pointer;
+    outline: 5px dotted red;
+    outline-offset: 5px;
+    pointer-events: all;
+    z-index: 950;
+    animation: pulseOutline 2s infinite;
+}
+
+#statue1 { 
+    top: 48%;
+    width: 8%;
+    height: 36%;
+    left: 9%; 
+}
+#statue2 { 
+    top: 48%;
+    width: 6%;
+    height: 32%;
+    left: 19%; 
+}
+#statue3 { 
+    top: 48%;
+    width: 6%;
+    left: 26%; 
+}
+#statue4 { 
+    top: 48%;
+    right: 27%; 
+}
+#statue5 { 
+    top: 48%;
+    right: 18%; 
+    width: 7%;
+    height: 31%;
+}
+#statue6 {
+    top: 48%;
+    right: 7%; 
+    width: 8%;
+    height: 36%;
+}
+
+
+
+<!-- Settings Options --->
+
+.story-modal {
+    font-family: sans-serif;
+    font-size: 16px;
+  }
+  
+  .large-font {
+    font-size: 24px;
+  }
+  
+  .serif-font {
+    font-family: 'Times New Roman', serif;
+  }
+  
+  .no-border {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+
+
+  <!-- Animation --->
+
 .gold-transition {
     position: fixed;
     top: 0;
@@ -111,4 +246,10 @@ body {
 @keyframes goldHue {
     0% { background: rgba(255, 215, 0, 0.1); }
     100% { background: rgba(255, 215, 0, 0.7); }
+}
+
+@keyframes pulseOutline {
+    0% { outline-color: red }
+    50% { outline-color: darkred; }
+    100% { outline-color: red; }
 }
